--- a/public/assets/css/app.css
+++ b/public/assets/css/app.css
@@ -10,8 +10,8 @@ body {
 	font-size: 14px;
 	color: #3a3f43;
 	letter-spacing: .5px;
-	/* background: #f7f7ff; */
-	background: #efeff7;
+	background: #f7f7ff;
+	/* background: #efeff7; */
 	overflow-x: hidden;
 	font-family: Roboto
 }
@@ -102,7 +102,8 @@ a {
 	left: 250px;
 	right: 0;
 	height: 60px;
-	background: #efeff7;
+	/* background: #efeff7; */
+	background: #f7f7ff;
 	/* border-bottom: 1px solid rgb(228 228 228 / 0%); */
 	z-index: 10;
 	/* -webkit-box-shadow: 0 2px 6px 0 rgb(218 218 253 / 65%), 0 0px 6px 0 rgb(206 206 238 / 54%); */
