--- a/public/assets/css/file-upload.css
+++ b/public/assets/css/file-upload.css
@@ -13,6 +13,7 @@
   --clr-light-blue: rgb(171, 202, 255);
 }
 
+/* 
 body {
   margin: 0;
   padding: 0;
@@ -24,7 +25,7 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
-}
+} */
 
 /* End General Styles */
 
