Update color scheme in file-upload.css and select2-bootstrap4.css, and add background gradient to bodyTag in app.blade.php

--- a/public/assets/css/file-upload.css
+++ b/public/assets/css/file-upload.css
@@ -9,7 +9,7 @@
   --clr-black: rgb(0, 0, 0);
   --clr-light: rgb(245, 248, 255);
   --clr-light-gray: rgb(196, 195, 196);
-  --clr-blue: rgb(63, 134, 255);
+  --clr-blue: rgb(74 164 217);
   --clr-light-blue: rgb(171, 202, 255);
 }
 
