--- a/public/assets/plugins/select2/css/select2-bootstrap4.css
+++ b/public/assets/plugins/select2/css/select2-bootstrap4.css
@@ -87,7 +87,7 @@
 
 .select2-container--bootstrap4 .select2-selection {
   background-color: #fff;
-  border: 1px solid #ced4da;
+  border: 1px solid #4aa4d9;
   border-radius: 0.25rem;
   -webkit-transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
   transition: border-color 0.15s ease-in-out, -webkit-box-shadow 0.15s ease-in-out;
@@ -143,7 +143,7 @@ form.was-validated select:valid ~ .select2-container--bootstrap4 .select2-select
 
 .select2-container--bootstrap4 .select2-results__option--highlighted,
 .select2-container--bootstrap4 .select2-results__option--highlighted.select2-results__option[aria-selected=true] {
-  background-color: #007bff;
+  background-color: #4aa4d9;
   color: #f8f9fa; }
 
 .select2-container--bootstrap4 .select2-results__option[role=group] {
